kubernetes/main/avto-masini/avto-masini-web/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avto-masini-avto-masini-web
  namespace: avto-masini
  labels:
    app: avto-masini-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avto-masini-web
  template:
    metadata:
      labels:
        app: avto-masini-web
    spec:
      containers:
        - name: avto-masini-web
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          image: registry.gitlab.com/avto-masini/avto-masini-web:ci-build-d9d108e9
          imagePullPolicy: Always
          ports:
            - name: avto-masini-web
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          volumeMounts:
            - name: tmp
              mountPath: /tmp/
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /run
          securityContext:
            runAsUser: 1000 # Non-root user
            runAsGroup: 3000 # Non-root group
            readOnlyRootFilesystem: true # Read-only filesystem
            allowPrivilegeEscalation: false # No privilege escalation
            privileged: false
            capabilities:
              drop:
                - ALL # Drop all capabilities
              add:
                - NET_BIND_SERVICE # Allow only required capabilities
      imagePullSecrets:
        - name: pull-token
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: run
          emptyDir: {}
