kubernetes/main/avto-masini/avto-masini-web/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avto-masini-web
  namespace: avto-masini
spec:
  ports:
    - name: avto-masini-web
      port: 80
      targetPort: avto-masini-web
  selector:
    app: avto-masini-web
  type: ClusterIP
